# shrimpy_tesollo

./: .gitignore  DOCKER_README.md  Dockerfile.isaac  README.md  compose.isaac.yaml  convert_npz_to_hdf5.py  convert_npz_to_hdf5_objects.py  isaacsim_shrimpy.py  shrimpy_col_data.py  shrimpy_eval_isaacsim.py
data/: check_npz.py
data/drop_demos/: episode_0000.npz  episode_0024.npz  episode_0029.npz  episode_0030.npz  episode_0032.npz  episode_0036.npz  episode_0041.npz  episode_0049.npz  episode_0075.npz
data/interrupt_demos/: episode_0001.npz  episode_0003.npz  episode_0006.npz  episode_0010.npz  episode_0020.npz  episode_0067.npz  episode_0070.npz  episode_0077.npz
data/isaacsim_demos/: episode_0000.npz  episode_0001.npz  episode_0002.npz  episode_0003.npz  episode_0004.npz  episode_0005.npz  episode_0006.npz  episode_0007.npz  episode_0008.npz  episode_0009.npz  episode_0010.npz  episode_0011.npz  episode_0012.npz  episode_0013.npz  episode_0014.npz  episode_0015.npz  episode_0016.npz  episode_0017.npz  episode_0018.npz  episode_0019.npz  episode_0020.npz  episode_0021.npz  episode_0022.npz  episode_0023.npz  episode_0024.npz  (+224 more)
dex-retargeting/: .gitignore
dex_retarget/: README.md
dex_retargeting/: README.md
diffusion_policy/: conda_environment.yaml  eval.py
docs/: README.md  index.html
robot_description/: README.md
robot_motion/: CMakeLists.txt  README.md  pyproject.toml
robot_motion/cmake/: robot_motionConfig.cmake.in
robot_motion/cpp/examples/: joint_torque.cpp
robot_motion/cpp/include/robot_motion/controllers/: controller.hpp  joint_torque_controller.hpp
robot_motion/cpp/include/robot_motion/robot_properties/: panda_properties.hpp  robot_properties.hpp
robot_motion/cpp/include/robot_motion/utils/: vector_utils.hpp
robot_motion/cpp/src/bindings/: python_bindings.cpp
robot_motion/cpp/src/controllers/: cartesian_torque_controller.cpp  controller.cpp  joint_torque_controller.cpp
robot_motion/cpp/src/robot_properties/: panda_properties.cpp  robot_properties.cpp
robot_motion/cpp/src/utils/: vector_utils.cpp
robot_motion/src/robot_motion/: __init__.py
robot_motion/src/robot_motion/examples/: bimanual_ik.py  joint_torque.py
robot_motion/src/robot_motion/ik/: ik.py  multi_chain_ranged_ik.py  ranged_ik.py  ranged_ik_rust_wrapper.py
robot_motion/src/robot_motion/ik/config/: bimanual_ik_settings.yaml  left_panda_ik_settings.yaml  right_panda_ik_settings.yaml
robot_motion_interface/: CMakeLists.txt  README.md  pyproject.toml
robot_motion_interface/cmake/: robot_motion_interfaceConfig.cmake.in
robot_motion_interface/config/: bimanual_arm_config.yaml  isaacsim_config.yaml  left_panda_config.yaml  left_tesollo_config.yaml  right_panda_config.yaml
robot_motion_interface/cpp/examples/: panda.cpp  tesollo.cpp
robot_motion_interface/cpp/include/robot_motion_interface/: interface.hpp  panda_interface.hpp
robot_motion_interface/cpp/include/robot_motion_interface/tesollo/: tesollo_communication.hpp  tesollo_dg3f_interface.hpp
robot_motion_interface/cpp/include/robot_motion_interface/utils/: eigen_conversion.hpp
robot_motion_interface/cpp/src/: panda_interface.cpp
robot_motion_interface/cpp/src/bindings/: python_bindings.cpp
robot_motion_interface/cpp/src/tesollo/: tesollo_communication.cpp  tesollo_dg3f_interface.cpp
robot_motion_interface/ros/src/robot_motion_interface_ros/: package.xml  setup.cfg  setup.py
robot_motion_interface/ros/src/robot_motion_interface_ros/robot_motion_interface_ros/: interface_node.py
robot_motion_interface/ros/src/robot_motion_interface_ros_msgs/: CMakeLists.txt  package.xml
robot_motion_interface/ros/src/robot_motion_interface_ros_msgs/action/: Home.action  SetCartesianPose.action  SetJointPositions.action
robot_motion_interface/ros/src/robot_motion_interface_ros_msgs/msg/: ObjectPose.msg  ObjectPoses.msg
robot_motion_interface/src/robot_motion_interface/: __init__.py  bimanual_interface.py  interface.py
robot_motion_interface/src/robot_motion_interface/examples/: isaacsim_blocking.py  isaacsim_cartesian.py  isaacsim_objects.py  isaacsim_static.py  oscillating_ex.py  oscillating_ex_panda_tesollo.py
robot_motion_interface/src/robot_motion_interface/isaacsim/: isaacsim_interface.py  isaacsim_object_interface.py
robot_motion_interface/src/robot_motion_interface/isaacsim/config/: bimanual_arm_articulation_config.py  bimanual_arm_env_config.py  bimanual_arm_objects_env_config.py
robot_motion_interface/src/robot_motion_interface/isaacsim/usds/: Fork.usd  README.md  bin.usd  bowl.usd  cup.usd  fork.usd  funnel.usd  marker.usd  mug_cup.usd  pink_bin_large.usd  plastic_box.usd  plate.usd  sauce_bowl.usd  spoon.usd  wooden_cooking_spoon.usd
robot_motion_interface/src/robot_motion_interface/isaacsim/usds/bimanual_arms/: .asset_hash  bimanual_arms.usd  config.yaml
robot_motion_interface/src/robot_motion_interface/isaacsim/usds/bimanual_arms/configuration/: bimanual_arms_physics.usd  bimanual_arms_robot.usd  bimanual_arms_sensor.usd
robot_motion_interface/src/robot_motion_interface/isaacsim/usds/converted_from_meshes/: Fork.stl  Mug Cup.stl  Plastic Box.stl  Plate.stl  Sauce Bowl.stl  Wooden Cooking Spoon.stl
robot_motion_interface/src/robot_motion_interface/isaacsim/utils/: isaac_session.py  mesh_converter.py  urdf_converter.py
robot_motion_interface/src/robot_motion_interface/panda/: panda_interface.py
robot_motion_interface/src/robot_motion_interface/tesollo/: tesollo_interface.py
robot_motion_interface/src/robot_motion_interface/utils/: array_utils.py  trajectory_utils.py
sensor_interface_py/: pyproject.toml
sensor_interface_py/src/sensor_interface/: README.md
sensor_interface_py/src/sensor_interface/camera/: kinect_interface.py  realsense_interface.py  rgbd_camera.py
sensor_interface_py/src/sensor_interface/camera/config/: calibrate_T_world_color.py  get_calibration.py  get_realsense_intrinsics.py  kinect_config.yaml  realsense_config.yaml  table_world_transform.yaml
sensor_interface_py/src/sensor_interface/camera/examples/: kinect_stream.py  realsense_stream_example.py
(+258 files in other folders)
