[build-system]
requires = ["scikit-build-core==0.12.2", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "robot-motion"
version = "0.0.1"
authors = [
  { name="Mya Schroder", email="schromya@gmail.com" },
]
description = "Project for common robot motion utilities (IK)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
wheel.packages = ["src/robot_motion"]