[build-system]
requires = ["scikit-build-core==0.12.2", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "robot-motion-interface"
version = "0.0.1"
authors = [
  { name="Mya Schroder", email="schromya@gmail.com" },
]
description = "Robot Motion Wrappers for Hardware/Software robots."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["numpy>=1.26.0", "PyYAML>=6.0.0", "pymodbus>=3.11"]

[tool.scikit-build]
wheel.packages = ["src/robot_motion_interface"]

